# super-claude

./: .gitignore  INSTRUCTIONS.md  README.md  deploy-auth.sh  docker-compose-auth.yml  docker-compose.yml  setup-auth.sh  test-auth.sh  test-output.md
mcps/ops/: Dockerfile  pyproject.toml  server.py
mcps/super-claude/: Dockerfile  PLUGIN_BUILD_SUMMARY.md  pyproject.toml  server.py
mcps/super-claude/core/: __init__.py  storage_interface.py  storage_manager.py
mcps/super-claude/core/secrets/: __init__.py  interface.py  manager.py
mcps/super-claude/core/secrets/backends/: __init__.py  onepassword.py
mcps/super-claude/plugins/: PLUGIN_GUIDE.md  __init__.py  dynamic_loader.py  op_auth.py  plugin_base.py  plugin_loader.py  plugin_manager.py  supernote.py  user_secrets.py
mcps/super-claude/providers/: __init__.py  gdrive.py  supernote.py
mcps/super-claude/scripts/: google_oauth_setup.py
mcps/super-claude/services/: __init__.py
mcps/super-claude/services/calendar/: interface.py
mcps/super-claude/services/calendar/adapters/: __init__.py  gcal.py
mcps/super-claude/services/calendarservice/: __init__.py  manager.py
mcps/super-claude/services/contacts/: __init__.py  interface.py  manager.py
mcps/super-claude/services/contacts/adapters/: __init__.py  gcontacts.py
mcps/super-claude/services/mail/: __init__.py  interface.py  manager.py
mcps/super-claude/services/mail/adapters/: __init__.py  gmail.py
mcps/super-claude/services/storage/: __init__.py  interface.py  manager.py
mcps/super-claude/services/storage/adapters/: __init__.py  gdrive.py
(+64 files in other folders)
