[project]
name = "super-claude-ops"
version = "0.1.0"
description = "Super Claude Ops MCP - Infrastructure administration"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
